Crashing on undo of ocean modifier. #38873

Closed
opened 2014-02-27 18:52:21 +01:00 by danem · 9 comments
danem commented 2014-02-27 18:52:21 +01:00 (Migrated from localhost:3001)

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
danem commented 2014-02-27 18:52:21 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
danem commented 2014-02-27 18:52:21 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @danem

Added subscriber: @danem
danem commented 2014-02-27 18:58:07 +01:00 (Migrated from localhost:3001)
Author

Eh, sorry. I'm not sure how this issue was posted without the information I provided. Unfortunately, I am not able to edit this after the fact...

The relevant information that inexplicably disappeared:

System Information
OS X 10.6.8 / NVIDIA GeForce GT 330M

Blender Version
Broken: 2.69.11 ( 2.7 )

Short description of error

Blender crashes when undoing the application of the ocean modifier. This only occurs when 2 or more object have the ocean modifier active ( not applied ).

Exact steps for others to reproduce the error

  • Add ocean modifier to default cube
  • Duplicate default cube
  • Apply ocean modifier
  • Press Ctrl+Z

ocean-mod-bug.blend

Eh, sorry. I'm not sure how this issue was posted without the information I provided. Unfortunately, I am not able to edit this after the fact... The relevant information that inexplicably disappeared: **System Information** OS X 10.6.8 / NVIDIA GeForce GT 330M **Blender Version** Broken: 2.69.11 ( 2.7 ) **Short description of error** Blender crashes when undoing the application of the ocean modifier. This only occurs when 2 or more object have the ocean modifier active ( not applied ). **Exact steps for others to reproduce the error** - Add ocean modifier to default cube - Duplicate default cube - Apply ocean modifier - Press Ctrl+Z [ocean-mod-bug.blend](https://archive.blender.org/developer/F79160/ocean-mod-bug.blend)

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-02-28 18:45:01 +01:00

Will try to understand what happens here... :/

Will try to understand what happens here... :/
Author

This issue was referenced by blender/blender-addons-contrib@f01d19431d

This issue was referenced by blender/blender-addons-contrib@f01d19431d0e2a14a007d5480e805b99dc933169
Author

This issue was referenced by f01d19431d

This issue was referenced by f01d19431d0e2a14a007d5480e805b99dc933169

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f01d19431d.

Closed by commit f01d19431d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38873
No description provided.