source/blender/blenlib/intern/threads.c
@@ -121,6 +121,7 @@ static pthread_mutex_t _opengl_lock = PTHREAD_MUTEX_INITIALIZER;
 static pthread_mutex_t _nodes_lock = PTHREAD_MUTEX_INITIALIZER;
 static pthread_mutex_t _movieclip_lock = PTHREAD_MUTEX_INITIALIZER;
 static pthread_mutex_t _colormanage_lock = PTHREAD_MUTEX_INITIALIZER;
+static pthread_mutex_t _fftw_lock = PTHREAD_MUTEX_INITIALIZER;
 static pthread_t mainid;
 static int thread_levels = 0;  /* threads can be invoked inside threads */
 static int num_threads_override = 0;
@@ -399,6 +400,8 @@ void BLI_lock_thread(int type)
 		pthread_mutex_lock(&_movieclip_lock);
 	else if (type == LOCK_COLORMANAGE)
 		pthread_mutex_lock(&_colormanage_lock);
+	else if (type == LOCK_FFTW)
+		pthread_mutex_lock(&_fftw_lock);
 }
 
 void BLI_unlock_thread(int type)
@@ -421,6 +424,8 @@ void BLI_unlock_thread(int type)
 		pthread_mutex_unlock(&_movieclip_lock);
 	else if (type == LOCK_COLORMANAGE)
 		pthread_mutex_unlock(&_colormanage_lock);
+	else if (type == LOCK_FFTW)
+		pthread_mutex_unlock(&_fftw_lock);
 }
 
 /* Mutex Locks */
